done with webcam. must store images to database.

--- a/webcam.html
+++ b/webcam.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="booth">
-        <div id="video" width="400" height="300"></div>
+        <video id="video" width="400" height="300" autoplay></video>
+        <button id="snap">Snap Photo</button>
+        <canvas id="canvas" width="400" height="300"></canvas>
     </div>
     <script src="js/photo.js"></script>
 </body>
